2003-11-18  Terry <tbiggs@users.sf.net>

	* bumped to 0.9.dev12
	* changed configure.in so gnome2 build is the default
	* added Andy's changes to gnomesword2.desktop.in
	* fixed bugs 842314, 842319, 842324, 842677 and 842688	


2003-11-13  Terry <tbiggs@users.sf.net>

	* bumped to 0.9.dev11
	* removed shortcut bar from preferences dialog - gnome2
	* removed shortcut bar page from preferences dialog - gnome2
	* fixed text pane max width bug 
	* fixed save search results list to bookmarks for sidebar search - gnome2	


2003-10-27  Terry <tbiggs@users.sf.net>

	* bumped gnome2 port to 0.9.dev9
	* fixed a couple of crashes
	

2003-10-21  Terry <tbiggs@users.sf.net>

	* bumped gnome2 port to 0.9.dev8


2003-10-17  Terry <tbiggs@users.sf.net>

	* changed bookmarks ctree to treeview


2003-10-06  Terry <tbiggs@users.sf.net>

	* bumped gnomesword-2.0 to 0.9.dev7	
	* added book_closed.png, book_open.png and helpdoc.png from Devhelp-0.7
	  for gnome2/gbs.c treeview.


2003-09-27  Terry <tbiggs@users.sf.net>

	* changed ctree to treeview in gnome2/gbs.c and gnome2/gbs_dialog.c
	* changed search results clist to listview in gnome2/sidebar.c
	* cleaned up ui (I hope)


2003-09-17  Terry <tbiggs@users.sf.net>

	* changed clist to listview in gnome2/dictlex.c and gnome2/dictlex_dialog.c


2003-09-10  Terry <tbiggs@users.sf.net>

	* moved add_module_to_language_folder, add_language_folder and
	  gui_load_module_tree from sidebar.c to utilities.c to be used by other 
	  files.
	* replaced the search_dialog ctree with a treeview widget.
	
2003-09-06  Terry <tbiggs@users.sf.net>

	* bumped to 0.9.dev6
	
	
2003-07-30  Terry <tbiggs@users.sf.net>

	* Added chapter_display_textview to gnome2/gtkhtml_display.c
	  for right to left support
	* added 
	  'AC_ARG_ENABLE(gnome2,[--enable-gnome2 build],gnome2=$enableval,gnome2="no") 
	  to configure.in for building the gnome2 port


2003-07-25  Terry <tbiggs@users.sf.net>

	* added src/gnome2 for port to gnome2

